# "adi_gpu_base" crate - Licensed under the MIT LICENSE
#  * Copyright (c) 2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯

[package]
name = "adi_gpu_base"
version = "0.6.1"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

license = "MIT"
documentation = "https://docs.rs/adi_gpu_base"
homepage = "http://plopgrizzly.com/adi_gpu_base"
repository = "https://github.com/plopgrizzly/adi_gpu_base"

readme = "readme.md"
description = "Trait for implementing the adi_gpu api"
keywords = ["graphics", "trait", "base", "adi_gpu", "api"]
categories = ["hardware-support", "rendering", "template-engine"]

exclude = [
	"examples/*", "code_of_conduct.md", "contributing.md", ".gitignore",
	"_config.yml", "issue_template.md", "icon.png", "icon.ico"
]

[dependencies]
ami = "^0.8"
awi = "^0.7"