# "adi_gpu_base" - Aldaron's Device Interface / GPU / Base
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "adi_gpu_base"
version = "0.7.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "BSL-1.0"
documentation = "https://docs.rs/adi_gpu_base"
homepage = "https://plopgrizzly.com/adi_gpu_base"
repository = "https://github.com/plopgrizzly/adi_gpu_base"
readme = "readme.md"
description = "Trait for implementing the adi_gpu api"
keywords = ["graphics", "trait", "base", "adi_gpu", "api"]
categories = ["hardware-support", "rendering", "template-engine"]

[dependencies]
ami = "0.9"
awi = "0.8"
